test/e2e/app-dir/app/app/error/client-component/error.js
'use client'

export default function ErrorBoundary({ error, reset }) {
  return (
    <>
      <p id="error-boundary-message">An error occurred: {error.message}</p>
      <button id="reset" onClick={() => reset()}>
        Try again
      </button>
    </>
  )
}
